Capacidade de atualizar as cores dos neurônios pelo arquivo neuron_update

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /neural3d.exe
 /neural_net_3d_dynamic.cpp
 /neural_net_3d_dynamic_orbit.cpp
+/Extrator/logs_unified_final
+/Extrator/__pycache__
+/data
